--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.1.1",
+    "jquery": "^3.3.1",
     "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.19",
     "node-sass": "^4.11.0",
+    "popper.js": "^1.14.7",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
